fixed extra padding

--- a/resources/sass/_layout.scss
+++ b/resources/sass/_layout.scss
@@ -845,9 +845,10 @@ a {
 
 // LANDING PAGE / WE PROVIDE
 .we-provide {
-    padding: 70px 0;
+    padding-top: 50px;
     background: url('~/assets/images/bg-wave.svg') left no-repeat #fff;
     background-attachment: fixed;
+
     .icon-box {
         box-shadow: 0 2px 3px #dfdfe5;
         background: #fff;
